# PIT_sudoku_Jean_Ribes

./: notes.md  requirements.txt
qtcreator-ui/SudokuSolver/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
script/: compress.sh  install.sh  quickstart.sh
src/: grid.py  gui.py  jtestsolv.py  play_sudoky.py  qt_ui.py  solve_all_sudokus.py  solver.py  test_solver.py
